--- a/popup/style.css
+++ b/popup/style.css
@@ -1,45 +1,36 @@
-body{
-    background: #111;
-    color: #eee;
+body {
+    width: 300px;
+    background: #111111;
+    color: #eeeeee;
+    font-size: 1.3rem;
 }
 
-.control{
+.content {
     margin: auto;
-    width: fit-content;
-    display: flex;
-}
-
-.lbl{
     display: flex;
     align-items: center;
-}
-.separator{
-    width: 30px;
+    text-align: center;
+    width: max-content;
+    padding: 50px 0;
 }
 
-.content{
-    max-width: 500px;
-    margin: auto;
-    font-size: 1.3rem;
-    padding-top: 50px;
+.separator {
+    width: 30px;
 }
 
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
-    margin: auto;
+    width: 40px;
+    height: 23px;
 }
 
-/* Hide default HTML checkbox */
 .switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
-/* The slider */
 .slider {
     position: absolute;
     cursor: pointer;
@@ -55,8 +46,8 @@ body{
 .slider:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
+    height: 17px;
+    width: 17px;
     left: 4px;
     bottom: 4px;
     background-color: white;
@@ -73,12 +64,11 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(17px);
+    -ms-transform: translateX(17px);
+    transform: translateX(17px);
 }
 
-/* Rounded sliders */
 .slider.round {
     border-radius: 34px;
 }
